added field for subimage caption

--- a/views/editblogform.pug
+++ b/views/editblogform.pug
@@ -38,6 +38,8 @@ block content
             br
             input#edit-blog-subimage(type='text', name='edit-blog-subimage', placeholder='Subsection Image Link', value=`${c.postsubimage}`) 
             br
+            input#new-blog-subimagecaption(type='text', name='new-blog-subimagecaption', placeholder='Subsection Image Caption', value=`${c.postsubimagecaption}`)
+            br
             textarea#edit-blog-subtext(type='text', name='edit-blog-subtext', placeholder='Subsection Text')= c.postsubtext
             br
             input#edit-blog-suborder(type='number', name='edit-blog-suborder', placeholder='#', value=`${c.postsuborder}`) 
