--- a/views/newblogform.pug
+++ b/views/newblogform.pug
@@ -37,6 +37,8 @@ block content
           br
           input#new-blog-subimage(type='text', name='new-blog-subimage', placeholder='Subsection Image Link')
           br
+          input#new-blog-subimagecaption(type='text', name='new-blog-subimagecaption', placeholder='Subsection Image Caption')
+          br
           textarea#new-blog-subtext(type='text', name='new-blog-subtext', placeholder='Subsection Text')
           br
           input#new-blog-suborder(type='number', name='new-blog-suborder', placeholder='#')
