--- a/views/bloglanding.pug
+++ b/views/bloglanding.pug
@@ -3,15 +3,14 @@ extends layout
 block content
   main
     h2 Photography Blog Management
-    a(href='/blog/create')
-      .new-blog-button#add-new-blog
-        span
-          i.far.fa-plus-circle
-        span Add New Blog
+    .new-blog-button#add-new-blog
+      span
+        i.far.fa-plus-circle
+      span Add New Blog
     section.blog-listing-container
       each l in bloglisting
         .blog-landing-listing
-          a.blog-post-preview(href=`/blog/${l.postquick}`)
+          a.blog-post-preview(href=`/blog/preview/${l.postquick}`)
             i.fad.fa-eye.fa-lg
           h4= l.posttitle
           h5= l.postsummary
