--- a/views/blogsampleview.pug
+++ b/views/blogsampleview.pug
@@ -14,6 +14,6 @@ block content
             h5= p.postsubheader
             if p.postsubimage !== ''
               img(src=`${p.postsubimage}`)
-            if p.postsubimage !== ''
+            if p.postsubimagecaption !== ''
               span.subimage-caption= p.postsubimagecaption
             p= p.postsubtext
